@@ -1,7 +1,6 @@
 package org.minimalj.example.helloworld;
 
 import org.minimalj.frontend.Frontend;
-import org.minimalj.frontend.Frontend.FormContent;
 import org.minimalj.frontend.Frontend.IContent;
 import org.minimalj.frontend.page.Page;
 
@@ -14,9 +13,7 @@ public class HelloWorldPage extends Page {
 
 	@Override
 	public IContent getContent() {
-		FormContent form = Frontend.getInstance().createFormContent(1, 100);
-		form.add(Frontend.getInstance().createText("Hello World"), null);
-		return form;
+		return Frontend.getInstance().createHtmlContent("Hello World");
 	}
 
 }
