@@ -23,11 +23,11 @@ public class GreetingPage extends Page {
 	@Override
 	public IContent getContent() {
 		FormContent form = Frontend.getInstance().createFormContent(1, 100);
-		form.add(Frontend.getInstance().createText("Hello " + user.name), null);
+		form.add(null, Frontend.getInstance().createText("Hello " + user.name), null, 1);
 		if (user.image != null) {
 			Input<byte[]> image = Frontend.getInstance().createImage(null);
 			image.setValue(user.image);
-			form.add(image, new FormElementConstraint(3, FormElementConstraint.MAX));
+			form.add(null, image, new FormElementConstraint(3, FormElementConstraint.MAX), 1);
 		}
 		return form;
 	}
