@@ -12,17 +12,28 @@ import org.minimalj.util.resources.Resources;
 
 public class CheckBoxFormElement extends AbstractFormElement<Boolean> {
 	private final Input<Boolean> checkBox;
+	private final boolean caption;
 	
 	public CheckBoxFormElement(PropertyInterface property, boolean editable) {
 		 this(property, Resources.getPropertyName(property, ".checkBoxText"), editable);
 	}
 	 
 	public CheckBoxFormElement(PropertyInterface property, String text, boolean editable) {
+		this(property, text, editable, true);
+	}
+
+	public CheckBoxFormElement(PropertyInterface property, String text, boolean editable, boolean caption) {
 		super(property);
+		this.caption = caption;
 		checkBox = Frontend.getInstance().createCheckBox(listener(), text);
 		checkBox.setEditable(editable);
 	}
 	
+	@Override
+	public String getCaption() {
+		return caption ? super.getCaption() : null;
+	}
+
 	@Override
 	public IComponent getComponent() {
 		return checkBox;
