@@ -617,7 +617,7 @@ $ICON
 			caption.appendChild(tooltip);
 			cellElement.appendChild(caption);
 		} else {
-			cellElement.style.verticalAlign = "bottom";
+			cellElement.style.display = "flex";
 		}
 		var cellContent = createContent(cell);
 		setWidths(cellElement, cellContent, span, width);
