@@ -6,6 +6,7 @@ Every release contains many small fixes.
 * Extract use of JavaFx in ext project
 * Material design: dropdown triangle
 * more consistent date parsing
+* Redesign form interface, add GROW_FIRST (column)
 
 === 1.15.0.0
 * historized sql repository: complete support historized references (and lists)
